--- a/public/style.css
+++ b/public/style.css
@@ -13,6 +13,15 @@ p{
     margin: 0px 10px;
 }
 
+#logout{
+    float: right;
+    background-color:rgb(58, 106, 252);
+}
+
+#logout:hover{
+    background-color: black;
+}
+
 .chatbox{
     border: 2px solid rgb(9, 132, 189);
     width: 70%;
@@ -48,12 +57,14 @@ form{
 
 .chat{
     margin: 10px;
-    width: 25%;
-    border: 2px solid black;
+    width: fit-content;
+    max-width: 30%;
+    border: 2px solid rgb(9, 132, 189);
     border-radius: 10px;
     background-color: rgb(9, 132, 189);
     color: white;
-    text-align: center;
+    padding-left: 10px;
+    padding-right: 15px;
 }
 .right{
     float: right;
@@ -96,14 +107,121 @@ label:hover{
 body.modal-open .container{
     filter : blur(5px);
 }
+body.modal-open nav{
+    filter : blur(5px);
+}
 
-@media only screen and (max-width: 575px){
+@media only screen and (max-width: 990px){
     .col-12{
-        max-width: 60%;
-        margin-left: 15%;
-        padding-right: 15px;
+        max-width: 45%;
+        margin-left: 0%;
     }
     .col{
-        padding-left: 0px;
+        margin-left: 20px;
+    }
+    label{
+        margin-right: 0px;
+    }
+}
+@media only screen and (max-width: 760px){
+    .col-12{
+        max-width: 40%;
+        margin-left: 0%;
+    }
+    .col{
+        margin-left: 10px;
+    }
+    label{
+        margin-right: 0px;
+        margin-left: 1px;
+    }
+}
+@media only screen and (max-width: 575px){
+    .col-sm-6{
+        width: 30%;
+        margin-left: -125px;
+    }
+    .col{
+        width: 20%; 
+        margin-left: 2px;
+    }
+    .col-sm-1{
+        width: 20%;
+        margin-right: -150px;
+    }
+    .hide{
+        visibility: collapse;
+    }
+}
+@media (min-width: 280px) and (max-width: 398px){
+    .col-sm-6{
+        width: 10%;
+        margin-left: -85px;
+    }
+    .col{
+        width: 5%; 
+        margin-left: 2px;
+    }
+    .col-sm-1{
+        width: 5%;
+        margin-right: -90px;
+        margin-left: -10px;
+    }
+    .hide{
+        visibility: collapse;
+    }
+}
+@media (min-width: 400px) and (max-width: 575px){
+    .col-sm-6{
+        width: 20%;
+        margin-left: -105px;
+    }
+    .col{
+        width: 10%; 
+        margin-left: 30px;
+    }
+    .col-sm-1{
+        width: 10%;
+        margin-right: -125px;
+        margin-left: 0px;
+    }
+    .hide{
+        visibility: collapse;
+    }
+}
+@media only screen and (width: 540px){
+    .col-sm-6{
+        width: 10%;
+        margin-left: -130px;
+    }
+    .col{
+        width: 5%; 
+        margin-left: 0px;
+    }
+    .col-sm-1{
+        width: 5%;
+        margin-right: -135px;
+        margin-left: 5px;
+    }
+    .hide{
+        visibility: collapse;
+    }
+}
+@media (width: 280px){
+    .col-sm-6{
+        width: 10%;
+        margin-left: -85px;
+    }
+    .col{
+        width: 5%; 
+        margin-left: 2px;
+    }
+    .col-sm-1{
+        width: 5%;
+        margin-right: -60px;
+        margin-left: -10px;
+    }
+    .hide{
+        visibility: collapse;
     }
 }
