--- a/public/style.css
+++ b/public/style.css
@@ -312,10 +312,10 @@ body.modal-open nav {
 }
 
 @media (min-width: 280px) and (max-width: 398px) {
-    .col-sm-6 {
+    /* .col-sm-6 {
         width: 40%;
         margin-left: -10px;
-    }
+    } */
 
     .col {
         width: 5%;
